fix(server): align auction outcome notifications and trim dead code
Fix inbox title/body mismatch when the leader leaves before auction end
by centralizing won/lost delivery in notifyAuctionOutcome(), skipping
duplicate AUCTION_ENDED inbox in the observer path, and notifying the
new leader on promotion. Remove unused CompositeNotifier and SoundManager,
drop notifyParticipants(), and shorten verbose FIX/JavaDoc comments across
main and test sources. Update unit tests for lifecycle delivery and
AutoBid ghost-user skip behavior.